add JWT authentication and add swagger doc
